fix timer gap

--- a/src/blocks/timer/timer.scss
+++ b/src/blocks/timer/timer.scss
@@ -30,6 +30,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 250px;
+    width: 100%;
 
     &__time {
       font-family: DelaGothicOne, sans-serif;
